--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=teleklass_msuru
-DB_USERNAME=root
+DB_USERNAME=app_user
 DB_PASSWORD=I6Cr*Y0C
 
 BROADCAST_DRIVER=log
